# school_roster

./: .gitignore  README.md  flake.nix  pnpm-lock.yaml  shell.nix
src-tauri/: Cargo.toml
src-tauri/migrations/: 20240903155251_create_subjects.sql  20240903155252_create_teachers.sql  20240903155253_link_teacher_subjects.sql  20240903155254_create_groups.sql  20240903155255_create_classroom.sql  20240903155256_assignments.sql  20240903155257_link_groups_subjects.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/class/: classrooms.rs  groups.rs  mod.rs  subjects.rs  teachers.rs
src-tauri/src/util/: assignments.rs  mod.rs  read_excel.rs  xlsx.rs
src/lib/components/buttons/: ConfirmModal.svelte  FilterButton.svelte  ToggleDarkTheme.svelte  TooltipIcon.svelte
src/lib/components/forms/classrooms/: ClassroomView.svelte  NewClassroom.svelte
src/lib/components/grid/: GridView.svelte  SubjectsPanel.svelte
src/lib/components/navbar/: Navbar.svelte  itemData.ts
src/lib/components/tables/: TableComponent.svelte
src/lib/components/utils/: ImportExcel.svelte  NoResults.svelte  NotFound.svelte  Settings.svelte
src/lib/modules/entities/: assignments.ts  classroomStore.ts  groupsStore.ts  subjectsStore.ts  teachersStore.ts
src/lib/utilities/: helpers.ts
src/routes/: +page.svelte
src/routes/window/[windowName]/: +page.svelte
src/styles/: _variables.scss  config.scss  excel.scss  global.scss  grid.scss  nav.scss  table.scss
src/styles/buttons/: color-picker.scss  modal.scss  search.scss
src/styles/form/: desing.scss  editor.scss
(+7 files in other folders)
